adding Open Sans to each line-height option

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Base Base - Baselining Template</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Open+Sans|Open+Sans+Condensed:300|Oswald|PT+Sans|Raleway|Roboto|Source+Sans+Pro" rel="stylesheet">
-    <link rel="stylesheet" href="/css/examples.css">
+    <link rel="stylesheet" href="css/examples.css">
 </head>
 <body>
     <script>
-        for (let i = 10; i <= 70; i++) {
+        for (let i = 10; i <= 60; i = i + 2) {
             const testEl = document.createElement('p');
             testEl.innerText = `${i}px: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore`;
             testEl.classList.add(`base-base-${i}`);
