Switching to cap-height based calcs

--- a/examples/compare/index.html
+++ b/examples/compare/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Base Base - Baselining Template</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:400:700|Montserrat:400:700|Open+Sans:400:700|Open+Sans+Condensed:300:400:700|Oswald:400:700|PT+Sans:400:700|Raleway:400:700|Roboto|Source+Sans+Pro:400:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400:700|Montserrat:400:700|Open+Sans:400:700|Open+Sans+Condensed:300:400:700|Oswald:400:700|PT+Sans:400:700|Raleway:400:700|Roboto|Source+Sans+Pro:400:700|Noto+Sans:400" rel="stylesheet">
     <link rel="stylesheet" href="/css/examples.css">
 </head>
 <body>
